exports[`test voted 1`] = `
<div
  className="voting">
  <div
    className="voting ui buttons">
    <button
      className="ui button"
      onClick={undefined}>
      <i
        className="heart icon" />
      Trainspotting
    </button>
    <button
      className="ui button"
      onClick={undefined}>
      28 Days Later
    </button>
  </div>
</div>
`;

exports[`test voting 1`] = `
<div
  className="voting">
  <div
    className="voting ui buttons">
    <button
      className="ui button"
      onClick={undefined}>
      Trainspotting
    </button>
    <button
      className="ui button"
      onClick={undefined}>
      28 Days Later
    </button>
  </div>
</div>
`;

exports[`test winner 1`] = `
<div
  className="voting">
  <span>
    Trainspotting
     winner!
  </span>
</div>
`;
